# cf-dioxus

./: LICENSE  README.md  package-lock.json  package.json
cf-dioxus/: Cargo.toml  Dioxus.toml  README.md  dioxus-build
cf-dioxus-axum-api/: Cargo.toml  README.md  dioxus-build  wrangler.toml
cf-dioxus-axum-api/src/: lib.rs
cf-dioxus-http-api/: Cargo.toml  README.md  dioxus-build  wrangler.toml
cf-dioxus-http-api/src/: lib.rs
cf-dioxus-pages/: README.md  wrangler.toml
cf-dioxus-server-fn/: Cargo.toml  README.md  dioxus-build  wrangler.toml
cf-dioxus-server-fn/src/: lib.rs
cf-dioxus-worker/: Cargo.toml  README.md  dioxus-build  wrangler.toml
cf-dioxus-worker/src/: lib.rs
cf-dioxus/assets/: main.css
cf-dioxus/src/: lib.rs  main.rs
