[package]
name = "cf-dioxus-axum-api"
version = "0.1.0"
edition = "2021"
authors = ["Jonathan Giddy <jongiddy@gmail.com>"]

[package.metadata.release]
release = false

[lib]
crate-type = ["cdylib"]

[dependencies]
axum = { version = "0.8", default-features = false, features = ["json", "query"]}
cf-dioxus = { path = "../cf-dioxus", features = ["api"] }
console_error_panic_hook = { version = "0.1.7" }
tower-service = "0.3.3"
worker = { version = "0.6", features = ['http', 'axum'] }
worker-macros = { version = "0.6", features = ['http'] }
