[package]
name = "cf-dioxus-http-api"
version = "0.1.0"
edition = "2021"
authors = ["Jonathan Giddy <jongiddy@gmail.com>"]

[package.metadata.release]
release = false

[lib]
crate-type = ["cdylib"]

[dependencies]
cf-dioxus = { path = "../cf-dioxus", features = ["api"] }
console_error_panic_hook = { version = "0.1.7" }
futures = "0.3"
http = "1.3"
serde_json = "1"
serde_urlencoded = "0.7"
worker = { version = "0.6", features = ['http'] }
worker-macros = { version = "0.6", features = ['http'] }
