[package]
name = "cf-dioxus-worker"
version = "0.1.0"
edition = "2021"
authors = ["Jonathan Giddy <jongiddy@gmail.com>"]

[package.metadata.release]
release = false

[lib]
crate-type = ["cdylib"]

[dependencies]
cf-dioxus = { path = "../cf-dioxus", default-features = false }
console_error_panic_hook = { version = "0.1.7" }
http = "1.3"
worker = { version = "0.6.0", features = ['http'] }
worker-macros = { version = "0.6.0", features = ['http'] }
