[package]
name = "cf-dioxus"
version = "0.1.0"
authors = ["Jonathan Giddy <jongiddy@gmail.com>"]
edition = "2021"

[dependencies]
dioxus = { version = "0.6.0", features = ["router"] }

# Dependencies for `api` feature
reqwest = { version = "0.12", features = ["json"], optional = true }
serde = { version = "1", features = ["derive"], optional = true }
serde_urlencoded = { version = "0.7", optional = true }
web-sys = { version = "0.3", features = ["Location", "Window"], optional = true}

# Dependencies for `server-fn` feature
server_fn = { version = "0.8", features = ["browser"], optional = true }
server_fn_macro_default = { version = "0.8", optional = true }

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
api = ["dep:reqwest", "dep:serde", "dep:serde_urlencoded", "dep:web-sys"]
server-fn = ["dep:server_fn", "dep:server_fn_macro_default"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
